# fake-complaints-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  fr_cm_001_vertical_slice_prompts.md  openapi.json  package-lock.json  package.json
.cursor/: api-standards.mdc  docker-architecture.mdc  frontend-react-best-practices.mdc  git-standards.mdc  makefile-targets.mdc  poetry-backend.mdc  powerhell-enforcement.mdc  secure-request-headers.mdc  testing-coverage-structure.mdc  testing-tools.mdc  type-safety.mdc
.cursor/instructions/: FR-CM-001.md  FR-CM-004.md  FR-CM-016.md  FR-CM-023.md
.cursor/instructions/prompts/: feature_dev.md
.cursor/rules/: api-standards.mdc  database-architecture.mdc  development-phases.mdc  docker-architecture.mdc  e2e-testing-strategy.mdc  front-end-deployment.mdc  frontend-react-best-practices.mdc  git-standards.mdc  lint-code-format.mdc  logging-standards-backend.mdc  logging-standards-frontend.mdc  logging-standards.mdc  makefile-targets.mdc  poetry-backend.mdc  secure-variables.mdc  testing-tools.mdc  type-safety.mdc
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/src/test_spectrum_system/: main.py
backend/src/test_spectrum_system/alembic/: env.py
backend/src/test_spectrum_system/alembic/versions/: 3d3a1edd3ae1_add_complainants_table_and_complainant_.py  4ffc07840df0_feat_db_add_patient_id_and_case_id_to_.py  6d3b3a6bef12_create_complaints_table.py  beb1e6faf406_add_category_fk_to_complaints.py  dec9078837c8_create_complaint_categories_table.py  f804fe9b28e4_feat_db_add_patients_and_cases_tables.py
backend/src/test_spectrum_system/complaints/: models.py  routes.py  schemas.py
backend/src/test_spectrum_system/config/: core.py  logging.py
backend/src/test_spectrum_system/db/: database.py
backend/src/test_spectrum_system/exceptions/: base.py
backend/src/test_spectrum_system/scripts/: seed_categories.py  seed_data.py
backend/src/tests/unit/: test_complaints_routes.py  test_database.py  test_exceptions.py  test_main.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.build.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  setup.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/complaint/: ComplaintForm.test.tsx  ComplaintForm.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/: ComplaintDetailsPage.tsx  Dashboard.tsx  Home.tsx  NewComplaintPage.tsx
frontend/src/services/: apiClient.ts
frontend/src/types/: api.ts
frontend/tests/e2e/: address-capture.spec.ts  complaint.spec.ts
src/: pyproject.toml
src/components/: ErrorBoundary.tsx
src/components/complaint/: ComplaintForm.tsx
src/pages/: NewComplaintPage.tsx
src/services/: apiClient.ts  logger.ts
src/test_spectrum_system/: main.py
src/test_spectrum_system/config/: logging.py
src/test_spectrum_system/exceptions/: base.py
src/types/: index.ts
