[tool.poetry]
name = "test-spectrum-system"
version = "0.1.0"
description = "Backend for the Test Spectrum System."
authors = ["Mark O'Brien <markmikeobrien@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
ruff = "^0.12.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set a comfortable line length. This is shared by the linter and formatter.
line-length = 88
# Exclude directories from all checks.
extend-exclude = ["docs"]
# Allow ruff to automatically fix issues.
fix = true

[tool.ruff.lint]
# Select the rule sets to use.
# E = pycodestyle errors
# W = pycodestyle warnings
# F = Pyflakes
# I = isort
select = ["E", "W", "F", "I"]

[tool.ruff.format]
# Use black-compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
